feat : adding constraints on database and entities : cascade on delete, not null, max length. Adding messages for not null constraints see issue #14